# change-detect

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/cd_pipeline/: __init__.py  cli.py  config.py  pipeline.py  types.py
src/cd_pipeline/stages/: __init__.py  alignment.py  dino.py  patch_saver.py  ssim_l1.py  tiling.py  warp_filter.py  yolo_filter.py
src/cd_pipeline/utils/: tmp.py
tests/stages/: test_alignment.py  test_bboxes.py
tests/utils/: test_has_black_pixels.py
