[project]
name        = "cd_pipeline"
version     = "0.1.0"
description = "Semantic change-detection pipeline (alignment → tiling → filtering → YOLO)."
authors     = [{ name = "Darya Bakshinska", email = "dariyab@gmail.com" }]
license     = "MIT"
requires-python = ">=3.10"

dependencies = [
  "opencv-python-headless>=4.5.3,<5.0",
  "numpy>=1.21.0,<2.0",
  "scikit-image>=0.18.3,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.1,<3.0",
  "typer>=0.9.0,<1.0",
  "ultralytics>=8.0.0,<9.0",
  "transformers>=4.41,<5.0",
  "rasterio>=1.3,<2.0",
  "shapely>=2.0,<3.0",
  "gdal==3.11.3",
  "pyproj>=3.7.1",
]


[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff"
]

# ────────────────────────────────────────────────────────────────
# Console-script entry point: “cd-pipeline …”
# ────────────────────────────────────────────────────────────────
[project.scripts]
cd-pipeline = "cd_pipeline.cli:app"

# ────────────────────────────────────────────────────────────────
# Build system (uv uses setuptools under the hood)
# ────────────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
